# skin_sense_ai

./: .env.example  biome.json  drizzle.config.ts  package.json
backend/: .env.example  docker-compose.yaml  main.py  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: f672e4f7d6e8_init.py
backend/api/: upload.py  user.py
backend/core/: config.py  minio_client.py
backend/core/database/: __init__.py  db.py
backend/crud/: user.py
backend/models/: __init__.py  user.py
backend/schemas/: user.py
backend/services/: minio_client.py
backend/utils/: password.py
frontend/: .env.example  biome.json  package.json
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(editor)/: layout.tsx
frontend/src/app/(public)/: layout.tsx
frontend/src/app/(skin-detection)/: layout.tsx
frontend/src/components/: app-header.tsx
frontend/src/lib/: api-client.ts  env.ts
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(auth)/login/: page.tsx
src/app/(auth)/sign-up/: page.tsx
src/app/api/scans/: route.ts
src/app/scans/: layout.tsx  page.tsx
src/app/scans/[id]/: page.tsx
src/app/scans/_components/: analysis-results.tsx  drop-image.tsx  preview-state.tsx  scan-sidebar-content.tsx  scan-sidebar-trigger.tsx  scan-sidebar.tsx  (+3 more)
src/db/: index.ts  schema.ts
src/hooks/: use-auth.ts  use-scans.ts  use-subscriptions.ts
src/integrations/tanstack-react-query/: index.tsx
src/lib/: auth-client.ts  auth-utilts.ts  auth.ts  hugging_client.ts  openrouter.ts  polar.ts
src/lib/supabase/: client.ts  server.ts
(+23 files in other folders)
